force-app/main/default/objects/CancelledOpportunityLineItem__c/CancelledOpportunityLineItem__c.object-meta.xml
<CustomObject>
    <description>Products that initially were in an opportunity but later were cancelled by some reason.</description>
    <label>Cancelled Opportunity Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancelled Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>