force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of size range</fullName>
            </value>
            <value>
                <fullName>Out of steel grade</fullName>
            </value>
            <value>
                <fullName>Out of product range</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>