force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/CancelReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonDetails__c</fullName>
    <label>Cancel Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>