force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/CDD__c.field-meta.xml
<CustomField>
    <fullName>CDD__c</fullName>
    <label>CDD</label>
    <type>Date</type>
</CustomField>