force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>CancelledProducts</relationshipName>
    <type>Lookup</type>
</CustomField>