force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/CoatingSpecification__c.field-meta.xml
<CustomField>
    <fullName>CoatingSpecification__c</fullName>
    <label>Coating Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>