force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ConfirmedCDD__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedCDD__c</fullName>
    <label>Confirmed CDD</label>
    <type>Date</type>
</CustomField>