force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ExtraCosts_t__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts_t__c</fullName>
    <label>Extra Costs (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>