force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/FinDept__c.field-meta.xml
<CustomField>
    <fullName>FinDept__c</fullName>
    <label>Fin Dept Approval</label>
    <length>3</length>
    <type>Text</type>
</CustomField>