force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/FinStatus__c.field-meta.xml
<CustomField>
    <fullName>FinStatus__c</fullName>
    <label>Fin Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>