force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/InitialQuantity__c.field-meta.xml
<CustomField>
    <fullName>InitialQuantity__c</fullName>
    <label>Initial Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>