force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/InquiryUnit__c.field-meta.xml
<CustomField>
    <fullName>InquiryUnit__c</fullName>
    <label>Measurement Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>