force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/InquiryUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InquiryUnitPrice__c</fullName>
    <label>Price per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>