force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <externalId>true</externalId>
    <label>ITE Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>