force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/LengthSize__c.field-meta.xml
<CustomField>
    <fullName>LengthSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>Cancelled_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>