force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Liabilities_t__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_t__c</fullName>
    <label>Liabilities (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>