force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/NPP_ERP__c.field-meta.xml
<CustomField>
    <fullName>NPP_ERP__c</fullName>
    <label>NPP in ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>