force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>Cancelled_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>