force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ProductionAllowed__c.field-meta.xml
<CustomField>
    <fullName>ProductionAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Allowed</label>
    <type>Checkbox</type>
</CustomField>