force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ProductSpecLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Spec Level</label>
    <referenceTo>ProductSpecLevel__c</referenceTo>
    <relationshipName>CancelledProducts</relationshipName>
    <type>Lookup</type>
</CustomField>