force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ProductStandard__c.field-meta.xml
<CustomField>
    <fullName>ProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Standard</label>
    <referenceTo>ProductStandard__c</referenceTo>
    <relationshipName>Cancelled_Products</relationshipName>
    <type>Lookup</type>
</CustomField>