force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>