force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Quantity_ft__c.field-meta.xml
<CustomField>
    <fullName>Quantity_ft__c</fullName>
    <label>Quantity (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>