force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Quantity_m__c.field-meta.xml
<CustomField>
    <fullName>Quantity_m__c</fullName>
    <label>Quantity (m)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>