force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Quantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>Quantity_pcs__c</fullName>
    <label>Quantity (pcs)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>