force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Sales_Price_per_ft__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_per_ft__c</fullName>
    <label>Sales Price (per ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>