force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Sales_Price_per_pcs__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_per_pcs__c</fullName>
    <label>Sales Price (per pcs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>