force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/SCDept__c.field-meta.xml
<CustomField>
    <fullName>SCDept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCDept</label>
    <type>Checkbox</type>
</CustomField>