force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <referenceTo>ShippingPoint__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>Cancelled_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>