force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipName>CancelledProducts</relationshipName>
    <type>Lookup</type>
</CustomField>