force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/TechExp__c.field-meta.xml
<CustomField>
    <fullName>TechExp__c</fullName>
    <label>Tech Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>