force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>CancelledProducts</relationshipName>
    <type>Lookup</type>
</CustomField>