force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>Cancelled_Products</relationshipName>
    <type>Lookup</type>
</CustomField>