force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Cancelled Opportunity Products</relationshipLabel>
    <relationshipName>CancelledProducts</relationshipName>
    <type>Lookup</type>
</CustomField>