force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Price per t</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>