force-app/main/default/objects/CancelledOpportunityLineItem__c/fields/Weight_ppf__c.field-meta.xml
<CustomField>
    <fullName>Weight_ppf__c</fullName>
    <label>Weight (ppf)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>